[package]
name = "parsec-rs"
version = "0.1.0"
description = "parser combinator library"
documentation = "parser combinator library"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.69"
